--- a/DaysUntoWeb/Views/Home/EditEvent.cshtml
+++ b/DaysUntoWeb/Views/Home/EditEvent.cshtml
@@ -6,7 +6,8 @@
     $(function () {
         $('.datepicker').datepicker();
     });
-</script>
+</script>
+
 
 
 
@@ -29,7 +30,8 @@
                 <!-- E-mail -->
                 <label class="control-label" for="CalendarEventDate">Date</label>
                 <div class="controls">
-                    @Html.TextBoxFor(m => m.CalendarEvent.CalendarEventDate, new { @class = "input-xlarge datepicker", @readonly = "readonly"})
+                    @Html.TextBoxFor(m => m.CalendarEvent.CalendarEventDate, new { @Value = (String.Format("{0:MM/dd/yyyy}", Model.CalendarEvent.CalendarEventDate)), @class = "input-xlarge datepicker", @readonly = "readonly"})
+                    
                 </div>
             </div>
         <div class="control-group">
