Added sample image

--- a/DaysUntoWeb/Views/Home/_Events.cshtml
+++ b/DaysUntoWeb/Views/Home/_Events.cshtml
@@ -51,6 +51,9 @@
                 <button type="submit" name="provider" class="zocial facebook" value="facebook" title="Sign in using your Facebook account">Sign in with Facebook</button>
                 <button type="submit" name="provider" class="zocial twitter" value="twitter" title="Sign in using your Twitter account">Sign in with Twitter</button>
                 }
+                <h3>Never forget important events! Here's a sample</h3><br/>
+                <p>
+                    <img src="~/Images/sample.PNG" /></p>
             }
         </div>
         <div class="clearfix"></div>
