--- a/DaysUntoWeb/Views/Home/_Holidays.cshtml
+++ b/DaysUntoWeb/Views/Home/_Holidays.cshtml
@@ -21,7 +21,7 @@
             </div>
             <hr />
         }
-        <a class="hidden-desktop pull-right" onclick="$('html,body').animate({scrollTop: $('#upcoming-events').offset().top}, 1500);"><i class="icon-circle-arrow-up" style="cursor: pointer; text-decoration: none;"></i></a>
+        <a class="hidden-desktop pull-right" onclick="$('html,body').animate({scrollTop: $('#infoyou').offset().top}, 1500);"><i class="icon-circle-arrow-up" style="cursor: pointer; text-decoration: none;"></i></a>
         <div class="clearfix"></div>
     </div>
 </div>
