--- a/DaysUntoWeb/Views/Home/Index.cshtml
+++ b/DaysUntoWeb/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
                     <div class="well-small">
                         <i class="icon-calendar icon-4x pull-left icon-border"></i>
                         <h1>Days Unto</h1>
-                        The easiest way to countdown your life's events. Keep track of your own events!
+                        The easy way to track your event's date.
                         <br />
                         <br />
                         @if (WebSecurity.IsAuthenticated)
