--- a/DaysUntoWeb/Views/Home/_Holidays.cshtml
+++ b/DaysUntoWeb/Views/Home/_Holidays.cshtml
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="span6">
                     <div class="span5">
-                        <div class="calendar event_date">
+                        <div class="calendar">
                             <span class="month">@Html.GetMonthName(holiday.HolidayDate)</span>
                             <span class="day">@holiday.HolidayDate.Day</span>
                         </div>
