--- a/DaysUntoWeb/Views/Shared/_Layout.cshtml
+++ b/DaysUntoWeb/Views/Shared/_Layout.cshtml
@@ -6,8 +6,8 @@
     <title>Days Unto</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Days Unto">
-    <meta name="author" content="Mike Williams">
-    @Styles.Render("~/css")
+    <meta name="author" content="Mike Williams"> 
+    @Styles.Render("~/Content/css")
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -17,16 +17,17 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
-    @Scripts.Render("~/scripts")
+
+    @Scripts.Render("~/Content/js")
     @RenderSection("scripts", required: false)
 </head>
-    
-    
-  
-    <body>
-       @Html.Partial("_Flash")
-     
-        <div class="navbar navbar-fixed-top hidden-desktop">
+
+
+
+<body>
+    @Html.Partial("_Flash")
+
+    <div class="navbar navbar-fixed-top hidden-desktop">
         <div class="navbar-inner">
             <div class="container">
                 <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -49,7 +50,7 @@
         @RenderBody()
     </div>
 
-    
+
 
 
 
