--- a/DaysUntoWeb/Views/Home/_Events.cshtml
+++ b/DaysUntoWeb/Views/Home/_Events.cshtml
@@ -23,9 +23,9 @@
                             </div>
                             <h3>@calendarEvent.Name </h3>
                             <span class="pull-right">
-                                @using (Html.BeginForm("DeleteEvent", "Home", new { @id = calendarEvent.CalendarEventId }, FormMethod.Post, new { @id = "deleteEventForm" })) 
+                                @using (Html.BeginForm("DeleteEvent", "Home", new { @id = calendarEvent.CalendarEventId }, FormMethod.Post, new { @id = "deleteEventForm" }))
                                 {
-                                     <a data-toggle="modal" title="edit event" style="cursor: pointer" onclick="showModal('#editModalContainerID', '#editModalBodyID', '@calendarEvent.CalendarEventId')"><i class="icon-edit"></i></a>
+                                    <a data-toggle="modal" title="edit event" style="cursor: pointer" onclick="showModal('#editModalContainerID', '#editModalBodyID', '@calendarEvent.CalendarEventId')"><i class="icon-edit"></i></a>
                                     <a data-id="@calendarEvent.CalendarEventId" data-name="@calendarEvent.Name" href="#" title="remove event" class="removeItem"><i class="icon-remove"></i></a>
                                 }
                             </span>
@@ -34,10 +34,10 @@
                         </div>
                     </div>
                 </div>
-                        <hr />
+                <hr />
                 
                     }
-                    <a class="hidden-desktop pull-right" onclick="$('html,body').animate({scrollTop: $('#infoyou').offset().top}, 1500);"><i class="icon-circle-arrow-up" style="cursor: pointer; text-decoration: none;"></i></a>
+                <a class="hidden-desktop pull-right" onclick="$('html,body').animate({scrollTop: $('#infoyou').offset().top}, 1500);"><i class="icon-circle-arrow-up" style="cursor: pointer; text-decoration: none;"></i></a>
                 <div class="clearfix"></div>
                 }
                 else
@@ -49,15 +49,23 @@
             {
                 <h2>Sign in below to start adding events</h2>
                 <br />
-                using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = ViewBag.ReturnUrl }))
+                using (Html.BeginForm("ExternalLogin", "Account", new {ReturnUrl = ViewBag.ReturnUrl}))
                 {
-                @Html.AntiForgeryToken()
-                <button type="submit" name="provider" class="zocial facebook" value="facebook" title="Sign in using your Facebook account">Sign in with Facebook</button>
-                <button type="submit" name="provider" class="zocial twitter" value="twitter" title="Sign in using your Twitter account">Sign in with Twitter</button>
+                    @Html.AntiForgeryToken()
+                    <div class="hidden-phone">
+                        <button type="submit" name="provider" class="zocial facebook" value="facebook" title="Sign in using your Facebook account" style="display: inline-block;">Sign in with Facebook</button>
+                        <button type="submit" name="provider" class="zocial twitter" value="twitter" title="Sign in using your Twitter account" style="display: inline-block;">Sign in with Twitter</button>
+                    </div>
+                    <div class="hidden-desktop">
+                        <button type="submit" name="provider" class="zocial facebook" value="facebook" title="Sign in using your Facebook account" style="display: inline-block;">Sign in with Facebook</button><br /><br/>
+                        <button type="submit" name="provider" class="zocial twitter" value="twitter" title="Sign in using your Twitter account" style="display: inline-block;">Sign in with Twitter</button>
+                    </div>
                 }
-                <h3>Never forget important events! Here's a sample</h3><br/>
+                <h3>Never forget important events! Here's a sample</h3>
+                <br />
                 <p>
-                    <img src="~/Images/sample.PNG" /></p>
+                    <img src="~/Images/sample.PNG" />
+                </p>
             }
         </div>
         <div class="clearfix"></div>
