Made some name changes

--- a/DaysUntoWeb/Views/Account/ExternalLoginFailure.cshtml
+++ b/DaysUntoWeb/Views/Account/ExternalLoginFailure.cshtml
@@ -8,8 +8,8 @@
             <div class="breadcrumb">
                 <div class="well well-small">
                     <i class="icon-calendar icon-4x pull-left icon-border"></i>
-                    <h1>Days Unto</h1>
-                    The easiest way to countdown your life's events. Keep track of your own events! Simply sign in using Facebook or Twitter and begin adding your own events.
+                   <h1>How Many Days Til</h1>
+                        A countdown for your important events!
                     <br />
                     <br />
                     <hr/>
