--- a/DaysUntoWeb/Views/Home/Index.cshtml
+++ b/DaysUntoWeb/Views/Home/Index.cshtml
@@ -7,8 +7,8 @@
                 <div class="breadcrumb">
                     <div class="well-small">
                         <i class="icon-calendar icon-4x pull-left icon-border"></i>
-                        <h1>Days Unto</h1>
-                        The easy way to track your event's date.
+                        <h1>How Many Days Til</h1>
+                        A countdown for your important events!
                         <br />
                         <br />
                         @if (WebSecurity.IsAuthenticated)
