--- a/DaysUntoWeb/Views/Shared/_Layout.cshtml
+++ b/DaysUntoWeb/Views/Shared/_Layout.cshtml
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Days Unto</title>
+    <title>How Many Days Til</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Days Unto">
+    <meta name="description" content="How Many Days Til">
     <meta name="author" content="Mike Williams"> 
     @Styles.Render("~/Content/css")
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -35,7 +35,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a class="brand" href="#">Days Unto</a>
+                <a class="brand" href="#">How Many Days Til</a>
                 <div class="nav-collapse">
                     <ul class="nav">
                         <li><a href="#" onclick="$('html,body').animate({scrollTop: $('#upcoming-events').offset().top}, 1500);">Upcoming Events</a></li>
