Added a wait message for calendar import

--- a/DaysUntoWeb/Views/Home/_AddEvent.cshtml
+++ b/DaysUntoWeb/Views/Home/_AddEvent.cshtml
@@ -13,6 +13,6 @@
     {
 
         <input class="input-file" name="calendarfile" title="Select Calendar File" type="file" required />
-        <button class="btn" style="vertical-align: top;" type="submit">Import</button>
+        <button class="btn" style="vertical-align: top;" type="submit" id="importCalendar">Import</button>
     }
 </div>
