--- a/DaysUntoWeb/Content/bootstrap.css
+++ b/DaysUntoWeb/Content/bootstrap.css
@@ -5216,3 +5216,35 @@ display: block;
     border-width: thin;
     padding: 2px;
 }
+
+ #loading
+    {
+        display:none;
+        position:fixed;
+        left:0;
+        top:0;
+        width:100%;
+        height:100%;
+        background:rgba(238,233,233,0.8);
+        z-index:1000;
+    }
+  
+    #loadingcontent
+    {
+        display:table;
+        position:fixed;
+        left:0;
+        top:0;
+        width:100%;
+        height:100%;
+    }
+  
+    #loadingspinner
+    {
+        display: table-cell;
+        vertical-align:middle;
+        width: 100%;
+        text-align: center;
+        font-size:larger;
+        padding-top:80px;
+    }
