--- a/DaysUntoWeb/Views/Shared/_Layout.cshtml
+++ b/DaysUntoWeb/Views/Shared/_Layout.cshtml
@@ -49,7 +49,13 @@
     <div class="container">
         @RenderBody()
     </div>
-
+    <div id="loading">
+    <div id="loadingcontent">
+        <p id="loadingspinner">
+           Please wait while your calendar is being imported.
+        </p>
+    </div>
+</div>
 
 
 
