Precomipled Razor Pages

--- a/DaysUntoWeb/Views/Home/Index.cshtml
+++ b/DaysUntoWeb/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                         A countdown for your important events!
                         <br />
                         <br />
-                        @if (WebSecurity.IsAuthenticated)
+                        @if (Request.IsAuthenticated)
                         {
                             @Html.Partial("_AddEvent")
                         }
