--- a/DaysUntoWeb/Views/Home/_Holidays.cshtml
+++ b/DaysUntoWeb/Views/Home/_Holidays.cshtml
@@ -3,7 +3,7 @@
 
 <div class="span6">
     <div id="upcoming-events" class="breadcrumb">
-        <h1>Upcoming @Model.Country events </h1>
+        <h1>Upcoming US events </h1>
         <br />
         @foreach (var holiday in Model.Holidays)
         {
