Restricted events to the current year

--- a/DaysUntoWeb/Views/Home/_Events.cshtml
+++ b/DaysUntoWeb/Views/Home/_Events.cshtml
@@ -8,7 +8,7 @@
             {
                 if (Model.CalendarEvents.Any())
                 {
-                <h1>Your upcoming events</h1>
+                <h1>Your upcoming @DateTime.Now.Year events</h1>
                 <br />
                     foreach (var calendarEvent in Model.CalendarEvents)
                     {
