--- a/DaysUntoWeb/Views/Shared/_Layout.cshtml
+++ b/DaysUntoWeb/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
     <div id="loading">
     <div id="loadingcontent">
         <p id="loadingspinner">
-           Please wait while your calendar is being imported.
+           Please wait while your calendar is being imported
         </p>
     </div>
 </div>
