--- a/DaysUntoWeb/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/DaysUntoWeb/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model DaysUntoWeb.Models.RegisterExternalLoginModel
+﻿@model HowManyDaysTil.Web.Models.RegisterExternalLoginModel
 
 <div id="column-1" class="span6">
     <div class="row">
