--- a/DaysUntoWeb/Views/Account/Manage.cshtml
+++ b/DaysUntoWeb/Views/Account/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@model DaysUntoWeb.Models.LocalPasswordModel
+﻿@model HowManyDaysTil.Web.Models.LocalPasswordModel
 @{
     ViewBag.Title = "Manage Account";
 }
