--- a/DaysUntoWeb/Views/Account/_SetPasswordPartial.cshtml
+++ b/DaysUntoWeb/Views/Account/_SetPasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model DaysUntoWeb.Models.LocalPasswordModel
+﻿@model HowManyDaysTil.Web.Models.LocalPasswordModel
 
 <p>
     You do not have a local password for this site. Add a local
