--- a/DaysUntoWeb/Views/Home/Index.cshtml
+++ b/DaysUntoWeb/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using DaysUntoWeb.Helpers
-@model DaysUntoWeb.Models.HomeViewModel
+﻿@model HowManyDaysTil.Web.Models.HomeViewModel
 <div class="row">
     <div id="column-1" class="span6">
         <div class="row">
