--- a/DaysUntoWeb/Views/Home/_Holidays.cshtml
+++ b/DaysUntoWeb/Views/Home/_Holidays.cshtml
@@ -1,5 +1,5 @@
-﻿@using DaysUntoWeb.Helpers
-@model DaysUntoWeb.Models.HomeViewModel
+﻿@using HowManyDaysTil.Web.Helpers
+@model HowManyDaysTil.Web.Models.HomeViewModel
 
 <div class="span6">
     <div id="upcoming-events" class="breadcrumb">
