--- a/DaysUntoWeb/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/DaysUntoWeb/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -1,11 +1,12 @@
-﻿@model ICollection<DaysUntoWeb.Models.ExternalLogin>
+﻿@using HowManyDaysTil.Web.Models
+@model ICollection<HowManyDaysTil.Web.Models.ExternalLogin>
 
 @if (Model.Count > 0)
 {
     <h3>Registered external logins</h3>
     <table>
         <tbody>
-        @foreach (DaysUntoWeb.Models.ExternalLogin externalLogin in Model)
+        @foreach (ExternalLogin externalLogin in Model)
         {
             <tr>
                 <td>@externalLogin.ProviderDisplayName</td>
