--- a/DaysUntoWeb/Views/Home/EditEvent.cshtml
+++ b/DaysUntoWeb/Views/Home/EditEvent.cshtml
@@ -1,4 +1,4 @@
-﻿@model DaysUntoWeb.Models.EditEventViewModel
+﻿@model HowManyDaysTil.Web.Models.EditEventViewModel
 <div class="modal-header">
     <a class="close" data-dismiss="modal">×</a>
     <h3>Edit Event</h3>
