--- a/DaysUntoWeb/Views/Home/_Events.cshtml
+++ b/DaysUntoWeb/Views/Home/_Events.cshtml
@@ -1,5 +1,5 @@
-﻿@using DaysUntoWeb.Helpers
-@model DaysUntoWeb.Models.HomeViewModel
+﻿@using HowManyDaysTil.Web.Helpers
+@model HowManyDaysTil.Web.Models.HomeViewModel
 
 <div class="row">
     <div class="span6">
